19th Alpha Release

NEWS:


NEW: [features/improvements]
+Add shortcut for Find Previous
+New version of Launch plugin (Run last executed program)
+Read Only indicators on tabs
+Add support for Progress 4GL
+Middle click can close tabs in Shelf
+Add custom highlighting for Issue Lists (from Torsten Mohr)
+Report number of files searched when doing a Find in Files
+Improve performance of Find All.

BUG FIXES:
+Middle click closes the tab that was clicked on and not the active tab
+Fix Find dialog not preserving order of lookin choices
+Fix searching in folded text not being exposed during search
+Fix random jumping to top/bottom of file during incremental search
+Fix text Drag n Drop not working on Windows.
+Don't show Python auto-comp choices after numbers.
+Fix file modified indicator not being hidden after saving file.
+Fix number of bugs with opening files from filebrowser on gtk versions
+Fix statusbar line column number not being updated when clicking on
Find Results links.
+Fix drag and drop of text not scrolling window as the mouse is moved toards top
or bottom of buffer.

#-----------------------------------------------------------------------------#

VERSION 0.4.01
DATE 11/24/2008
18th Alpha Release

NEWS:

Quick Bug fix release to fix some configuration related bugs.

BUG FIXES:
+Language settings not being loaded
+Running Editra from command line on Mac/Linux would not load some config
settings.

#-----------------------------------------------------------------------------#

VERSION 0.4.0
DATE 11/23/2008
17th Alpha Release

NEWS:

On Macintosh and Windows the user configuration files have moved to more 
platform specific locations. This transition should should happen automatically
but if there are any problems follow the onscreen instructions to manually
transition your preference settings to the new location. See the changelog
below for the details of other major changes.

NEW: [features/improvements]